# poetry-homebrew-formula

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.assets/: created.txt
.github/workflows/: linters.yaml  publish.yaml  tests.yaml
poetry_homebrew_formula/: __init__.py  exceptions.py  plugin.py  templating.py  types.py
poetry_homebrew_formula/templates/: formula.rb.j2  package_url.rb.j2  resources.rb.j2
tests/: conftest.py  helpers.py  test_main.py  test_templating.py
tests/fixtures/simple_project/: README.md  pyproject.toml
